<resources>
  <string name="app_name">Vidny</string>
  <string name="map">Map</string>
  <string name="select_zone">Select Block</string>
  <string name="about_me">About author</string>
  <string name="exit">Exit</string>
  <string name="refactor_database">Edit data</string>
  <string name="block_name">Block name:</string>
  <string name="add_block">Add block</string>
  <string name="map_preview">Map Preview</string>
  <string name="back_btn">Back</string>
  <string name="room_detail">Room details</string>
  <string name="main_menu">Main menu</string>
  <string name="block_details">Block detail</string>
  <string name="blocks_list">Blocks list</string>
  <string name="add_room">Add room</string>
  <string name="yest_text">Yes</string>
  <string name="no_text">No</string>
  <string name="string_free_room">Is Free:</string>
  <string name="string_water_in_room">Water in room:</string>
  <string name="string_price_room">Price:</string>
  <string name="delete_all">Delete all</string>
  <string name="string_room_number">Number:</string>
  <string name="block_name_for_room">Room`s block name</string>
  <string name="add_new_block">Add a new block</string>
  <string name="string_add_new_room">Add a new room</string>
  <string name="need_not_a_clear_field">Error </string>
  <string name="day_off">Day off: </string>
  <string name="click_for_change_date">Change date</string>
  <string name="update_database">Update global data</string>
  <string name="update_local_db">Update local data</string>
  <string name="please_wait">Please wait…</string>
  <string name="update_success">Update success</string>
  <string name="con_error">Connection Error!!</string>
  <string name="update_local_success">Local database updated successfully</string>
  <string name="rooms">Rooms</string>
  <string name="information">Information</string>
  <string name="date">DATE</string>
  <string name="udpate_room">Update</string>
  <string name="delete">Delete</string>
  <string name="delete_block">Delete block</string>
  <string name="room_list">Room list</string>
  <string name="is_free">Is free?</string>
  <string name="water_s">Water</string>
  <string name="price_p">Price</string>
  <string name="room_number">Room number</string>
</resources>
