<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@drawable/item_gradient_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_database_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        style="@style/CustomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                style="@style/CustomTextView"
                android:gravity="center"
                android:text="@string/add_new_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/CustomTextView"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:text="@string/block_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_weight="1"
                    android:hint="@string/block_name"
                    android:id="@+id/edit_text_block_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                style="@style/CustomButton"
                android:text="@string/add_block"
                android:id="@+id/button_add_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        style="@style/CustomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CustomTextView"
            android:gravity="center"
            android:text="@string/string_add_new_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CustomTextView"
            android:layout_weight="1"
            android:gravity="center|start"
            android:layout_gravity="center"
            android:text="@string/string_water_in_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.SwitchCompat
            style="@style/CustomSwitchColor"
            android:id="@+id/switch_water"
            android:textOn="@string/yest_text"
            android:textOff="@string/no_text"
            app:switchMinWidth="46dp"
            app:showText="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/CustomTextView"
                android:gravity="center|start"
                android:layout_weight="1"
                android:text="@string/string_free_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                style="@style/CustomSwitchColor"
                android:id="@+id/switch_free"
                app:switchMinWidth="46dp"
                app:showText="true"
                android:textOn="@string/yest_text"
                android:textOff="@string/no_text"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/CustomTextView"
                android:gravity="center|start"
                android:layout_weight="1"
                android:text="@string/string_price_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/edit_text_room_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/CustomTextView"
                android:gravity="center|start"
                android:layout_weight="1"
                android:text="@string/string_room_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/edit_text_room_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CustomTextView"
                android:gravity="center|start"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/block_name_for_room"
                android:id="@+id/textView2"/>

            <Spinner
                android:gravity="center"
                android:layout_weight="3"
                android:id="@+id/spinner_room_block_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>


        <Button
            android:layout_marginTop="10dp"
            style="@style/CustomButton"
            android:text="@string/add_room"
            android:id="@+id/button_save_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CustomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/delete_all"
                style="@style/CustomButton"
                android:text="@string/delete_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>

</LinearLayout>
