<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/activity_main_menu"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="ua.com.anna.borodina.annadiploma.views.MainMenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:text="@string/main_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <include layout="@layout/item_line"/>

<LinearLayout
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:paddingBottom="25dp"
    android:paddingTop="25dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/selector_corner_menu"
        android:id="@+id/map_line"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/selector_corner_menu"
        android:id="@+id/select_line"
        android:layout_below="@+id/map_line"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/select_zone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/selector_corner_menu"
        android:id="@+id/line_about"
        android:layout_below="@+id/select_line"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/about_me"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/selector_corner_menu"
        android:id="@+id/line_change_database"
        android:layout_below="@+id/line_about"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/refactor_database"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/exit_line"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/selector_corner_menu"
        android:layout_below="@+id/line_change_database"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>

</LinearLayout>
